add some pictures

--- a/20160210-Docker-Meetup-Belguim/Mastering-Docker-on-a-Raspberry-Pi.html
+++ b/20160210-Docker-Meetup-Belguim/Mastering-Docker-on-a-Raspberry-Pi.html
@@ -14,6 +14,16 @@
         font-weight: normal;
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      
+      .image-30 img {
+			width: 30%;
+      }
+  
+      .big-image img {
+			width: 80%;
+			margin-top: 15%;
+      }
+
     </style>
   </head>
   <body>
@@ -29,9 +39,12 @@ these days it's easy, but a long time ago...
 
 Dieter Reuter [@Quintus23M](https://twitter.com/Quintus23M)
 
-Hypriot Team [@HypriotTweets](https://twitter.com/HypriotTweets)
+.center[.image-30[![sketch](hypriot_logo_white_bg_1920.png)]]
 
-http://blog.hypriot.com
+Hypriot Team [@HypriotTweets](https://twitter.com/HypriotTweets) – http://blog.hypriot.com
+
+
+
 
 ***
 
@@ -39,7 +52,10 @@ Docker Meetup Belgium / February 10th, 2016
 
 ---
 
+
+
 # Agenda
+
 
 1. Introduction
 
@@ -92,14 +108,16 @@ Containers and the Internet of Things
 
 --> pushing the Docker technology into the IoT world
 
+
+
 ---
+
 
 # Ways - 1. Iteration
 
 run a proof-of-concept
 
   - select the Raspberry Pi as a popular device
-
   - tried to run Docker on a RPi model B
     - found only outdated tutorials 
     - using Alpine Linux was "special"
@@ -110,7 +128,15 @@ run a proof-of-concept
     - need to create a special Linux kernel
     - need to package all into a new SD card image
 
---> in the end, we built HypriotOS (based on Raspbian/Debian)
+
+
+---
+
+
+.center[.big-image[![sketch](docker_pirate.png)]]
+
+.center[--> in the end, we built HypriotOS (based on Raspbian/Debian)]
+
 
 ---
 
@@ -136,7 +162,12 @@ switching to Raspbian Jessie
 
 included support for the Raspberry 7" Touch Display
 
---> complete Docker toolset on ARM
+
+---
+
+.center[.big-image[![sketch](docker_pirate_raspberry_plus_docker-tools.png)]]
+
+.center[--> complete Docker toolset on ARM]
 
 ---
 
@@ -156,7 +187,15 @@ create a learning platform for clusters
 
   - ready for professional trainings too
 
---> Hypriot Cluster Lab is just easy-to-use
+
+
+---
+
+.center[.big-image[![sketch](docker_pirates_cluster_lab_node-style.png)]]
+
+.center[--> Hypriot Cluster Lab is just flash and boot.]
+
+
 
 ---
 
@@ -182,7 +221,15 @@ create a container OS for ARM devices
 
     - ODROID C2
 
---> device list will be continued...
+
+
+---
+
+.center[.big-image[![sketch](hypriotos_supported_devices.png)]]
+
+.center[--> device list will be continued...]
+
+
 
 ---
 
