--- a/20160210-Docker-Meetup-Belguim/Mastering-Docker-on-a-Raspberry-Pi.html
+++ b/20160210-Docker-Meetup-Belguim/Mastering-Docker-on-a-Raspberry-Pi.html
@@ -120,7 +120,7 @@ run a proof-of-concept
   - select the Raspberry Pi as a popular device
   - tried to run Docker on a RPi model B
     - found only outdated tutorials 
-    - using Alpine Linux was "special"
+    - using ArchLinux was "special"
     - upgrading Raspbian takes 5 to 6 hours
 
   - let's improve this situation!
